# ch32v003-simulate-ic

./: README.md
mcp23017/: README.md  firmware.c
tester/mcp23017/: CMakeLists.txt  mcp23017.c
tester_rp2040/: README.md  pyproject.toml  tasks.py
tester_rp2040/src/tester_rp2040/: __init__.py  i2c_test.py  mcp23017.py
