[project]
name = "tester-rp2040"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Atsushi Morimoto (74th)", email = "74th.tech@gmail.com" }
]
dependencies = [
    "circuitpython-stubs>=9.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.13.0",
    "invoke>=2.2.0",
    "ruff>=0.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tester_rp2040"]

[tool.mypy]
mypy_path = "typings"
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
